--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,113 @@
 {
-  "extends": "next/core-web-vitals"
+  "env": {
+      "browser": true,
+      "es2021": true,
+      "node": true
+  },
+  "extends": [
+      "next/core-web-vitals",
+      "plugin:react/recommended",
+      "standard-with-typescript",
+      "plugin:import/recommended"
+  ],
+  "settings": {
+      "react": {
+          "version": "detect"
+      },
+      "import/resolver": {
+          "typescript": {
+              "project": "."
+          }
+      }
+  },
+  "overrides": [],
+  "parserOptions": {
+      "ecmaVersion": "latest",
+      "sourceType": "module",
+      "project": "tsconfig.json"
+  },
+  "plugins": [
+      "react",
+      "import"
+  ],
+  "rules": {
+      "@typescript-eslint/restrict-template-expressions": "off",
+      "no-multi-spaces": [
+          "error",
+          {
+              "exceptions": {
+                  "TSTypeAnnotation": true
+              }
+          }
+      ],
+      "key-spacing": [
+          "error",
+          {
+              "align": "value"
+          }
+      ],
+      "padded-blocks": [
+          "error",
+          "always"
+      ],
+      "react/prop-types": "off",
+      "@typescript-eslint/consistent-type-assertions": "off",
+      "@typescript-eslint/strict-boolean-expressions": "off",
+      "@typescript-eslint/member-delimiter-style": [
+          "error",
+          {
+              "multiline": {
+                  "delimiter": "semi",
+                  "requireLast": true
+              }
+          }
+      ],
+      "react/react-in-jsx-scope": "off",
+      "semi": [
+          "error",
+          "always"
+      ],
+      "@typescript-eslint/semi": "off",
+      "@typescript-eslint/key-spacing": "off",
+      "import/extensions": [
+          "error",
+          "never",
+          {
+              "json": "always"
+          }
+      ],
+      "react/jsx-filename-extension": [
+          1,
+          {
+              "extensions": [
+                  ".tsx"
+              ]
+          }
+      ],
+      "import/order": [
+          "error",
+          {
+              "groups": [
+                  "builtin",
+                  "external",
+                  "internal"
+              ],
+              "pathGroups": [
+                  {
+                      "pattern": "react",
+                      "group": "external",
+                      "position": "before"
+                  }
+              ],
+              "pathGroupsExcludedImportTypes": [
+                  "react"
+              ],
+              "newlines-between": "always",
+              "alphabetize": {
+                  "order": "asc",
+                  "caseInsensitive": true
+              }
+          }
+      ]
+  }
 }
