feat: first section of the home page added
- mui icons added
- relative paths added
- card component added
- progressbar component added
- mui theme updated
- homepage updated

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,7 @@
       "@/*": ["./src/*"],
       "@/layouts": ["src/components/layouts/index"],
       "@/pages": ["src/components/pages/index"],
+      "@/ui": ["src/components/ui/index"],
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
