--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
     "@types/react-dom": "18.2.7",
     "eslint": "^8.0.1",
     "eslint-config-next": "13.4.19",
+    "leaflet": "^1.9.4",
     "next": "13.4.19",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-leaflet": "^4.2.1",
     "typescript": "*"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.4",
     "@typescript-eslint/eslint-plugin": "^6.4.0",
     "eslint-config-standard-with-typescript": "^39.0.0",
     "eslint-plugin-import": "^2.25.2",
