--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/node": "20.5.8",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
+    "axios": "^1.5.0",
     "eslint": "^8.0.1",
     "eslint-config-next": "13.4.19",
     "leaflet": "^1.9.4",
