--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-leaflet": "^4.2.1",
+    "simplebar-react": "^3.2.4",
     "swr": "^2.2.2",
     "typescript": "*"
   },
